# aws-snapshot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  PROJECT_STATUS_MARCH_30.md  README.md  SONNET_REVIEWS_QWEN3.5_20260309_022944.md  backup-config.example.yaml  backup-config.production.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  sam.yaml  samconfig.example.toml  serverless.yml  setup.cfg  setup.py  template.yaml
.github/workflows/: dev.yml  release.yml
.llm/: log.jsonl
docs/: AWS_SSO_TIPS.md  OPEN_SOURCE_ALTERNATIVES.md  PROD-DEPLOY-LOG.md  SAM_MIGRATION_LOG.md  SESSION_SUMMARY_REPORT.md  aws-backup-comparison.md  backup-solution-plan.md  cli-reference.md  how_it_works.md  index.md  sandbox-demo.md
docs/architecture/: cost-model.md  overview.md  s3-batch-operations.md  storage-tiers.md
docs/design/: ACCOUNT_ISOLATION.md  ATHENA_MANIFEST_PIPELINE.md  CLI_FIRST_RATIONALE.md  S3_MANIFEST_BOTTLENECK.md  TYPER_RATIONALE.md  VALIDATION_STRATEGY.md  backup-forensics.md  backup-solution-plan.md  disaster-recovery-scenario.md  dynamodb-pitr-watcher.md  iam-security-decisions.md  open-source-migration.md  retention-strategy-and-costs.md  s3-restore-strategy.md
docs/design/adr/: ADR-001-ths-interim-codebuild-cutover.md  ADR-002-inventory-manifest-pipeline-ths.md  ADR-003-run-state-transition-model.md  ADR-004-scheduler-health-observability.md  ADR-005-weekly-health-report.md  ADR-006-simplify-storage-tiers-drop-deep-archive.md  ADR-007-harden-inventory-control-plane-bucket.md  ADR-008-notification-recipients-managed-from-yaml.md  ADR-009-health-check-measurement-model.md  ADR-010-source-bucket-intelligent-tiering.md  ADR-011-four-color-signal-taxonomy.md  ADR-012-github-actions-deploy-workflow.md  ADR-013-discord-notification-support.md  ADR-014-inventory-optional-health-signals.md  ADR-014-pre-inventory-health-report-signals.md  README.md
docs/development/: UPDATE_REPORT_2026-03-30.md  contributing.md  lambda-deployment.md  release.md  sam-cutover-runbook.md  sam-deploy-verification.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/incidents/: 2026-06-19-toshi-silent-cleanup.md  README.md
docs/operations/: cheatsheet.md  enabling-notifications.md  health-signal-validation-sandbox.md  inventory-bucket-recovery.md  purge-from-backup.md
docs/user-guide/: backup.md  costs.md  health-report.md  restore.md  scheduling.md  setup.md  testing.md
scripts/: cleanup-backup-buckets.py  create-backup-roles.py  create-batch-role.py  create-reader-role.py  create-source-roles.py  enable-pitr.py  sandbox_setup.sh  setup-inventory.py
src/aws_snapshot/: __init__.py  athena_inventory.py  backup_engine.py  cli.py  dynamodb_backup.py  dynamodb_restore.py  event_log.py  health_report.py  integrity.py  inventory_state.py  lambda_alarm_bridge.py  lambda_handler.py  lambda_pitr_watcher.py  logging_config.py  s3_batch.py  s3_restore.py  state.py
src/aws_snapshot/commands/: __init__.py  check.py  config.py  events.py  health_report.py  notifications.py  restore.py  run_backup.py  schedule.py  setup.py  status.py  test.py
src/aws_snapshot/config/: __init__.py  loader.py  models.py
src/aws_snapshot/notifications/: __init__.py  discord.py  slack.py  sns.py
src/nzshm_backup/: __init__.py  athena_inventory.py  backup_engine.py  cli.py  dynamodb_backup.py  dynamodb_restore.py  event_log.py  health_report.py  integrity.py  inventory_state.py  lambda_alarm_bridge.py  lambda_handler.py  lambda_pitr_watcher.py  lambda_schema.py  logging_config.py  restore_state.py  run_state.py  s3_backup.py  s3_batch.py  s3_restore.py  time_utils.py
src/nzshm_backup/commands/: __init__.py  check.py  config.py  costs.py  events.py  health_report.py  notifications.py  report.py  restore.py  run_backup.py  schedule.py  setup.py  status.py  test.py
src/nzshm_backup/config/: __init__.py  loader.py  models.py
src/nzshm_backup/notifications/: __init__.py  slack.py
tests/: conftest.py  test_athena_inventory.py  test_backup_engine.py  test_check_command.py  test_cli.py  test_config.py  test_cross_account.py  test_dynamodb_backup.py  test_dynamodb_restore.py  test_event_log.py  test_health_report.py  test_integrity.py  test_inventory_state.py  test_lambda_alarm_bridge.py  test_lambda_handler.py  test_lambda_pitr_watcher.py  test_lambda_schema.py  test_notifications.py  test_notifications_apply.py  test_s3_backup.py  test_s3_batch.py  test_s3_restore.py  test_schedule.py  test_setup_command.py  test_status_command.py  test_test_command.py  test_time_utils.py
tests/fixtures/: setup-test-config.yaml
