[project]
name = "nzshm-backup"
version = "0.1.0"
description = "AWS-native backup solution for NSHM datasets"
authors = [
    {name = "NSHM DevOps Team", email = "admin@gns-nsdm.org.nz"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "typer>=0.9.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "shellingham>=1.5.0",
    "mkdocs>=1.5.0",
    "mkdocs-click>=0.8.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-material>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.poetry]
packages = [
    {include = "nzshm_backup", from = "src"}
]

[tool.poetry.scripts]
backup = "nzshm_backup.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=nzshm_backup --cov-report=term-missing"
