[project]
name = "aws-snapshot"
dynamic = ["version"]
description = "Point-in-time snapshots for S3 buckets and DynamoDB tables."
authors = [
    {name = "Chris B Chamberlain", email = "chrisbc@artisan.co.nz"}
]
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["aws", "s3", "dynamodb", "backup", "snapshot", "disaster-recovery", "pitr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Recovery Tools",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.9.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "shellingham>=1.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/GNS-Science/aws-snapshot"
Documentation = "https://github.com/GNS-Science/aws-snapshot#readme"
Repository = "https://github.com/GNS-Science/aws-snapshot"
Issues = "https://github.com/GNS-Science/aws-snapshot/issues"
Changelog = "https://github.com/GNS-Science/aws-snapshot/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-click>=0.8.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-material>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "moto[s3,dynamodb,events]>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "tox",
    "tox-uv",
    "pip-audit>=2.9.0,<3.0.0",
    # SAM CLI for deploys (sam build / sam deploy). Comes with a
    # large transitive dep tree but bundling it as a dev dep means
    # `uv sync --all-extras` is the only setup step.
    "aws-sam-cli>=1.140.0",
]

[project.scripts]
backup = "aws_snapshot.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/aws_snapshot/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_snapshot"]

[tool.uv]
exclude-newer = "1 week"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=aws_snapshot --cov-report=term-missing"
